# R2P2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Rakefile
.github/workflows/: ci.yml  pico-sdk.patch  picoruby.patch  rp2040js.patch
build_config/: r2p2-microruby-pico2.rb  r2p2-microruby-pico2_w.rb  r2p2-picoruby-pico.rb  r2p2-picoruby-pico2.rb  r2p2-picoruby-pico2_w.rb  r2p2-picoruby-pico_w.rb
doc/: DEBUG.md
include/: flash_disk.h  lwipopts.h  mbedtls_config.h  tusb_config.h
include-net/: lwipopts.h  mbedtls_config.h
mrblib/: app.rb  main_task.rb  prsh_task.rb  r2p2_task.rb  usb_task.rb
src/: flash_disk.c  hal.c  io_console.c  io_rp2040.c  main.c  msc_disk.c  usb_descriptors.c  usb_descriptors.c.bakk  usb_tud.c
